src/test/ui/rfc1598-generic-associated-types/generic_associated_type_undeclared_lifetimes.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:13:37
   |
LL |         + Deref<Target = Self::Item<'b>>;
   |                                     ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'undeclared`
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:17:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'undeclared>;
   |                                         ^^^^^^^^^^^ undeclared lifetime

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:11:47
   |
LL |     type Iter<'a>: Iterator<Item = Self::Item<'a>>
   |                                               ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:13:37
   |
LL |         + Deref<Target = Self::Item<'b>>;
   |                                     ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:17:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'undeclared>;
   |                                         ^^^^^^^^^^^ lifetime parameter not allowed

error: aborting due to 5 previous errors

Some errors occurred: E0110, E0261.
For more information about an error, try `rustc --explain E0110`.
